add preprocessor tools & temporarily combine two htmls as 'Split'

--- a/test/client/mainpage_style.css
+++ b/test/client/mainpage_style.css
@@ -51,6 +51,7 @@ span {
     margin: 9vh 0 9.5vh;
 }
 
+/* 
 #__Mainpage__homepage__container {
     height: 100vh;
 }
@@ -68,6 +69,7 @@ span {
     margin: 10vh 6.5vw;
     height: 39vh;
 }
+ */
 
 #__Mainpage__manualTrack__container {
     margin-top: 6.5vh;
