--- a/test/client/mainpage_style.css
+++ b/test/client/mainpage_style.css
@@ -121,6 +121,7 @@ span {
     border-radius: 10px;
     display: inline-flex;
     font-size: 24px;
+    font-weight: 600;
     margin: 30px 15px 0;
     padding-top: 24px;
     justify-content: center;
@@ -192,7 +193,7 @@ span {
     margin: 4vh 0;
 }
 
-.menu-flex {
+.menu-flex_temp {
     display: flex;
     font-size: large;
     height: 6.5vh;
