--- a/test/client/BeiBei.css
+++ b/test/client/BeiBei.css
@@ -25,7 +25,7 @@ body {
 	width:100vw;
 	z-index:2;
 }
-#__Page7__fullscreen,#__Page6__fullscreen,#__Mainpage__manualTrack__container,#__Page18__fullscreen,#__Page16__fullscreen,#__Mainpage__homepage__container{
+#__Page7__fullscreen,#__Page6__fullscreen,#__Mainpage__manualTrack__container,#__Page18__fullscreen,#__Page16__fullscreen,#__Mainpage__homepage__container,#__Mainpage__cameraTrack__container{
 	display:none;
 }
 .tab-title{display:none;}
