--- a/test/client/mainpage_style.css
+++ b/test/client/mainpage_style.css
@@ -113,6 +113,33 @@ span {
     height: 2.75vh;
 }
 
+#manualTrack__form__bar {
+    height: 38vh;
+}
+
+#manualTrack__timer__bar {
+    background-color: #E5E5E5;
+    border: 3px solid #000000;
+    height: 5vh;
+    line-height: 5vh;
+}
+
+#__Mainpage__cameraTrack__container {
+    margin-top: 6.5vh;
+    height: 93.5vh
+}
+
+#cameraTrack__form__bar {
+    height: 43vh;
+}
+
+#cameraTrack__timer__bar {
+    background-color: #E5E5E5;
+    border: 3px solid #000000;
+    height: 5vh;
+    line-height: 5vh;
+}
+
 /* 
     Detail of all elements 
 */
@@ -458,10 +485,6 @@ label {
     font-size: 16px;
 } */
 
-#manualTrack__form__bar {
-    height: 38vh;
-}
-
 #basis_infos {
     background-color: #fff333;
     border: 3px solid #000000;
@@ -561,14 +584,49 @@ input[type="checkbox"][id^="user"] {
     transform: translate(30vw, 32.5vh);
 }
 
-#manualTrack__timer__bar {
-    background-color: #E5E5E5;
-    border: 3px solid #000000;
-    height: 5vh;
-    line-height: 5vh;
-}
-
 .keypad {
     height: 33vh;
     width: 386px;
+}
+
+#video {
+    border: 1px solid black;
+    box-shadow: 2px 2px 3px black;
+    width: 320px;
+    height: 240px;
+}
+
+#photo {
+    border: 1px solid black;
+    box-shadow: 2px 2px 3px black;
+    width: 320px;
+    height: 240px;
+}
+
+#canvas {
+    display: none;
+}
+
+.camera {
+    width: 340px;
+    display: inline-block;
+}
+
+.output {
+    width: 340px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+#startbtn {
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 32px;
+    background-color: rgba(0, 150, 0, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+    font-size: 14px;
+    color: rgba(255, 255, 255, 1.0);
 }
